每日提交:策略模式+办公项目

--- a/nuoy0_office/src/main/resources/static/schedule/index.html
+++ b/nuoy0_office/src/main/resources/static/schedule/index.html
@@ -5,6 +5,6 @@
     <title>标题</title>
 </head>
 <body>
-    <button id="schedulebtn">schedule</button>
+    <button id="Taskbtn">Task</button>
 </body>
 </html>
